sandc/test/fixtures/pbtRegression/shouldSucceed/qualifiedPackageItems/Unnamed.sand
pub class Unnamed extends bar.Bar {
    use foo.Foo as Baz;
    t: Baz;
}