sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowUse/Foo.sand
pub class Foo {
    use java.util.ArrayList;
    use rlist as ArrayList;
}